--- a/npp-collapse-expand-demo8.html
+++ b/npp-collapse-expand-demo8.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script src="cookie-demo.js"></script>
-  <title>Demo8</title>
+  <title>Demo9</title>
 </head>
 <body>
    
@@ -44,6 +44,8 @@ var dummy=0;
 function dummy6(){
 var dummy=0 
 }  
+
+<a href ="https://community.notepad-plus-plus.org/topic/20890/problem-collapsing-and-expanding-text"> For further info refer this tread in forum of NPP</a>
 
 </script>
 
