--- a/npp-collapse-expand-demo8.html
+++ b/npp-collapse-expand-demo8.html
@@ -3,13 +3,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script src="cookie-demo.js"></script>
-  <title>Demo9</title>
+  <title>Demo8</title>
 </head>
 <body>
    
 <script>
 "use strict";
- 
+  
 function dummy1(){
 var dummy=0;
 } 
@@ -26,12 +26,12 @@ function explain(){
     document.writeln("Any edit inside this script-node will make collapse icons visible, but only below the point of edit.<br/>");
     document.writeln("Collapsing and expanding the enclosing node of this script the will make the nodes disappear again.<br/><br/>");
     document.writeln("Note: Collapsing any function inside this script (after making them appear) will not always yield the correct result: <br/>");
-	document.writeln("Instead of closing the function desired, the enclosing script node may close.  <br/>");
-	document.writeln("I can't find any rule that controls this behavior.<br/><br/>");
-	document.writeln("There is only one thing I'm resonably sure of:<br/>");
+    document.writeln("Instead of closing the function desired, the enclosing script node may close.  <br/>");
+    document.writeln("I can't find any rule that controls this behavior.<br/><br/>");
+    document.writeln("There is only one thing I'm resonably sure of:<br/>");
     document.writeln("The whole problem diappears if no *.js-script is included. See line 5 of the header.<br/><br/>");
-	document.writeln("(This seems to be true for Notepad++. <br/>");
-	document.writeln("And it is at least in part validated for SciTE text editor as well. Thanks to mere-human!) <br/><br/>");
+    document.writeln("(This seems to be true for Notepad++. <br/>");
+    document.writeln("And it is at least in part validated for SciTE text editor as well. Thanks to mere-human!) <br/><br/>");
 }
 explain();  
 
@@ -45,9 +45,10 @@ function dummy6(){
 var dummy=0 
 }  
 
-<a href ="https://community.notepad-plus-plus.org/topic/20890/problem-collapsing-and-expanding-text"> For further info refer this tread in forum of NPP</a>
 
 </script>
+
+<a href="https://community.notepad-plus-plus.org/topic/20890/problem-collapsing-and-expanding-text"> For further info refer to this tread in forum of NPP</a>
 
 </body>
 </html>
